:eyes: Removed unnecessary span and added overflow property to test voiceover focus issue on search icon

--- a/src/global-header/_global-header.scss
+++ b/src/global-header/_global-header.scss
@@ -202,6 +202,7 @@
         cursor: pointer;
         margin: 20px 0;
         min-height: 40px;
+        overflow: hidden;
         padding: 5px 22px;
         position: absolute;
         right: 15px;
